:pencil: Fix (#20)
下記のタグまわりを見直し
・"name": "frequently_asked_question",
・"name": "display_menu",
・"name": "provide_service",
